# bloomail

./: .gitignore  .gitmodules  .sample.env  CMakeLists.txt  LICENSE  README.md
example/: main.cpp
include/bloomail/: version.h
include/bloomail/base_clients/: i_base_client.h  smtp.h  smtp_client.h
include/bloomail/clients/: gmail.h
include/bloomail/helper_clients/: tcp_client.h  tls.h  tls_client.h
src/base_clients/: i_base_client.cpp  smtp.cpp  smtp_client.cpp
src/clients/: gmail.cpp
src/helper_clients/: tcp.cpp  tcp_client.cpp  tls.cpp  tls_client.cpp
